@@ -1,7 +1,7 @@
 Package: tm
 Title: Text Mining Package
-Version: 0.2
-Date: 2007-04-22
+Version: 0.2-1
+Date: 2007-04-27
 Author: Ingo Feinerer <h0125130@wu-wien.ac.at>
 Maintainer: Ingo Feinerer <h0125130@wu-wien.ac.at>
 Depends: cba, filehash, Matrix, methods, Snowball, XML
