@@ -1,3 +1,8 @@
+2007-04-27  Ingo Feinerer  <h0125130@wu-wien.ac.at>
+
+	* R/textdoccol.R: Removed \code{dbDisconnect} calls since last
+	\pkg{filehash} version makes them deprecated.
+
 2007-04-22  Ingo Feinerer  <h0125130@wu-wien.ac.at>
 
 	* R/termdocmatrix.R (textvector): Stemming is now performed before
